--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <title>Автосервіс Онлайн</title>
 
 <style>
-  /* Загальні стилі */
   body {
     margin:0; padding:0;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -16,7 +15,7 @@
   header {
     background: #000000;
     color: white;
-    padding: 1rem 1rem;
+    padding: 1rem;
     font-size: 1.6rem;
     font-weight: 600;
     text-align: center;
@@ -45,8 +44,8 @@
     border-bottom: 3px solid #000000;
   }
   main {
-    padding: 1rem 1rem 2rem 1rem;
-    max-width: 1000px;
+    padding: 1rem;
+    max-width: 900px;
     margin: auto;
   }
   section {
@@ -68,7 +67,6 @@
     background: white;
     color: #222;
     resize: vertical;
-    min-width: 0;
   }
   button.submit {
     background: #000000;
@@ -151,7 +149,6 @@
   label {
     font-weight: 600;
   }
-  /* Адаптивність */
   @media (max-width: 600px) {
     nav button {
       font-size: 0.9rem;
@@ -193,7 +190,6 @@
 </nav>
 
 <main>
-  <!-- Клієнти -->
   <section id="clients" class="active" role="tabpanel" aria-label="Клієнти">
     <div class="actions">
       <button id="importClientsBtn" type="button">Імпорт клієнтів</button>
@@ -210,7 +206,6 @@
     </table>
   </section>
 
-  <!-- Автомобілі -->
   <section id="cars" role="tabpanel" aria-label="Автомобілі">
     <div class="actions">
       <button id="importCarsBtn" type="button">Імпорт авто</button>
@@ -229,7 +224,6 @@
     </table>
   </section>
 
-  <!-- Запчастини -->
   <section id="parts" role="tabpanel" aria-label="Запчастини">
     <div class="actions">
       <button id="importPartsBtn" type="button">Імпорт запчастин</button>
@@ -246,7 +240,6 @@
     </table>
   </section>
 
-  <!-- Рахунки -->
   <section id="invoices" role="tabpanel" aria-label="Рахунки">
     <div class="actions">
       <button id="importInvoicesBtn" type="button">Імпорт рахунків</button>
@@ -281,7 +274,6 @@
     </table>
   </section>
 
-  <!-- Акти -->
   <section id="acts" role="tabpanel" aria-label="Акти">
     <div class="actions">
       <button id="importActsBtn" type="button">Імпорт актів</button>
@@ -307,9 +299,9 @@
 <script>
   const { jsPDF } = window.jspdf;
 
-  // Вкладки
   const tabs = document.querySelectorAll('nav button.tab');
   const sections = document.querySelectorAll('main section');
+
   tabs.forEach(tab => {
     tab.addEventListener('click', () => {
       tabs.forEach(t => t.classList.remove('active'));
@@ -319,14 +311,11 @@
     });
   });
 
-  // Дані з localStorage
   let clients = JSON.parse(localStorage.getItem('clients') || '[]');
   let cars = JSON.parse(localStorage.getItem('cars') || '[]');
   let parts = JSON.parse(localStorage.getItem('parts') || '[]');
   let invoices = JSON.parse(localStorage.getItem('invoices') || '[]');
   let acts = JSON.parse(localStorage.getItem('acts') || '[]');
-
-  // --- Рендер функції ---
 
   function updateClientDatalist(){
     const datalist = document.getElementById('clientNames');
@@ -358,7 +347,6 @@
       tbody.appendChild(tr);
     });
 
-    // Оновити селект авто в рахунках
     const sel = document.getElementById('invoiceCar');
     sel.innerHTML = '';
     cars.forEach((c,i) => {
@@ -378,7 +366,6 @@
       tbody.appendChild(tr);
     });
 
-    // Оновити селект запчастин в рахунках
     const sel = document.getElementById('invoiceParts');
     sel.innerHTML = '';
     parts.forEach((p,i) => {
@@ -407,32 +394,4 @@
         <td>${totalPrice.toFixed(2)}</td>
         <td>
           <button class="pdf-btn" data-index="${i}" type="button">PDF</button>
-          <button class="delete" data-type="invoice" data-index="${i}" type="button">×</button>
-        </td>`;
-      tbody.appendChild(tr);
-    });
-  }
-
-  function renderActs(){
-    const tbody = document.getElementById('actList');
-    tbody.innerHTML = '';
-    acts.forEach((act,i) => {
-      const tr = document.createElement('tr');
-      tr.innerHTML = `<td>${act.client}</td><td>${act.car}</td><td>${act.work}</td><td><button class="delete" data-type="act" data-index="${i}" type="button">×</button></td>`;
-      tbody.appendChild(tr);
-    });
-  }
-
-  // --- Додати записи ---
-
-  // Клієнти
-  document.getElementById('clientForm').addEventListener('submit', e => {
-    e.preventDefault();
-    const name = document.getElementById('clientName').value.trim();
-    const phone = document.getElementById('clientPhone').value.trim();
-    if(!name) return alert('Введіть ім\'я клієнта');
-    clients.push({name, phone});
-    localStorage.setItem('clients', JSON.stringify(clients));
-    renderClients();
-    e.target.reset();
-  });
+          <button class="delete" data-type="
