--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 <title>Автосервіс Онлайн</title>
-
 <style>
   body {
     margin:0; padding:0;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    background: #f7f9fc;
-    color: #222;
+    background: #fff;
+    color: #000;
   }
   header {
-    background: #000000;
+    background: #000;
     color: white;
     padding: 1rem;
     font-size: 1.6rem;
@@ -22,7 +21,7 @@
   }
   nav {
     display: flex;
-    background: white;
+    background: #fff;
     box-shadow: 0 2px 5px rgb(0 0 0 / 0.1);
     overflow-x: auto;
   }
@@ -40,8 +39,8 @@
     white-space: nowrap;
   }
   nav button.active {
-    color: #000000;
-    border-bottom: 3px solid #000000;
+    color: #000;
+    border-bottom: 3px solid #000;
   }
   main {
     padding: 1rem;
@@ -62,14 +61,14 @@
   input, select, textarea {
     padding: 0.6rem 0.9rem;
     font-size: 1rem;
-    border: 1px solid #ddd;
+    border: 1px solid #000;
     border-radius: 6px;
-    background: white;
-    color: #222;
+    background: #fff;
+    color: #000;
     resize: vertical;
   }
   button.submit {
-    background: #000000;
+    background: #000;
     color: white;
     font-weight: 700;
     border: none;
@@ -78,9 +77,10 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
     justify-self: start;
+    max-width: 150px;
   }
   button.submit:hover {
-    background: #333333;
+    background: #222;
   }
   table {
     width: 100%;
@@ -89,17 +89,17 @@
   }
   th, td {
     padding: 0.5rem 0.7rem;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #000;
     text-align: left;
     vertical-align: middle;
   }
   th {
-    background: #f1f5f9;
+    background: #eee;
     font-weight: 700;
-    color: #555;
+    color: #111;
   }
   td button.delete {
-    background: #e74c3c;
+    background: #b00020;
     color: white;
     border: none;
     padding: 0.25rem 0.6rem;
@@ -109,10 +109,10 @@
     transition: background-color 0.3s ease;
   }
   td button.delete:hover {
-    background: #c0392b;
+    background: #800015;
   }
   td button.pdf-btn {
-    background: #28a745;
+    background: #007a00;
     color: white;
     border: none;
     padding: 0.25rem 0.6rem;
@@ -123,31 +123,7 @@
     transition: background-color 0.3s ease;
   }
   td button.pdf-btn:hover {
-    background: #1e7e34;
-  }
-  .actions {
-    margin-bottom: 1.5rem;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 0.7rem;
-  }
-  .actions button {
-    background: #000000;
-    color: white;
-    border: none;
-    padding: 0.5rem 1rem;
-    border-radius: 6px;
-    font-weight: 600;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    flex: 1 0 auto;
-    min-width: 120px;
-  }
-  .actions button:hover {
-    background: #333333;
-  }
-  label {
-    font-weight: 600;
+    background: #004d00;
   }
   @media (max-width: 600px) {
     nav button {
@@ -167,15 +143,8 @@
     main {
       padding: 1rem 0.5rem 2rem 0.5rem;
     }
-    .actions {
-      flex-direction: column;
-    }
-    .actions button {
-      min-width: 100%;
-    }
   }
 </style>
-
 </head>
 <body>
 
@@ -186,112 +155,78 @@
   <button class="tab" data-tab="cars" type="button">Автомобілі</button>
   <button class="tab" data-tab="parts" type="button">Запчастини</button>
   <button class="tab" data-tab="invoices" type="button">Рахунки</button>
-  <button class="tab" data-tab="acts" type="button">Акти</button>
 </nav>
 
 <main>
-  <section id="clients" class="active" role="tabpanel" aria-label="Клієнти">
-    <div class="actions">
-      <button id="importClientsBtn" type="button">Імпорт клієнтів</button>
-      <button id="exportClientsBtn" type="button">Експорт клієнтів</button>
-    </div>
-    <form id="clientForm">
-      <input type="text" id="clientName" placeholder="Ім'я клієнта" required autocomplete="off" />
-      <input type="tel" id="clientPhone" placeholder="Телефон" autocomplete="off" />
-      <button type="submit" class="submit">Додати клієнта</button>
-    </form>
-    <table>
-      <thead><tr><th>Ім'я</th><th>Телефон</th><th>Видалити</th></tr></thead>
-      <tbody id="clientList"></tbody>
-    </table>
-  </section>
 
-  <section id="cars" role="tabpanel" aria-label="Автомобілі">
-    <div class="actions">
-      <button id="importCarsBtn" type="button">Імпорт авто</button>
-      <button id="exportCarsBtn" type="button">Експорт авто</button>
-    </div>
-    <form id="carForm">
-      <input type="text" id="carClient" placeholder="Власник (клієнт)" required list="clientNames" autocomplete="off"/>
-      <input type="text" id="carModel" placeholder="Модель автомобіля" required autocomplete="off"/>
-      <input type="text" id="carVIN" placeholder="VIN (опційно)" autocomplete="off"/>
-      <button type="submit" class="submit">Додати автомобіль</button>
-    </form>
-    <datalist id="clientNames"></datalist>
-    <table>
-      <thead><tr><th>Власник</th><th>Модель</th><th>VIN</th><th>Видалити</th></tr></thead>
-      <tbody id="carList"></tbody>
-    </table>
-  </section>
+<section id="clients" class="active" role="tabpanel" aria-label="Клієнти">
+  <form id="clientForm">
+    <input type="text" id="clientName" placeholder="Ім'я клієнта" required autocomplete="off" />
+    <input type="tel" id="clientPhone" placeholder="Телефон" autocomplete="off" />
+    <button type="submit" class="submit">Додати клієнта</button>
+  </form>
+  <table>
+    <thead><tr><th>Ім'я</th><th>Телефон</th><th>Видалити</th></tr></thead>
+    <tbody id="clientList"></tbody>
+  </table>
+</section>
 
-  <section id="parts" role="tabpanel" aria-label="Запчастини">
-    <div class="actions">
-      <button id="importPartsBtn" type="button">Імпорт запчастин</button>
-      <button id="exportPartsBtn" type="button">Експорт запчастин</button>
-    </div>
-    <form id="partForm">
-      <input type="text" id="partName" placeholder="Назва запчастини" required autocomplete="off" />
-      <input type="number" id="partPrice" placeholder="Ціна, грн" required min="0" step="0.01" autocomplete="off" />
-      <button type="submit" class="submit">Додати запчастину</button>
-    </form>
-    <table>
-      <thead><tr><th>Назва</th><th>Ціна, грн</th><th>Видалити</th></tr></thead>
-      <tbody id="partList"></tbody>
-    </table>
-  </section>
+<section id="cars" role="tabpanel" aria-label="Автомобілі">
+  <form id="carForm">
+    <input type="text" id="carClient" placeholder="Власник (клієнт)" required list="clientNames" autocomplete="off"/>
+    <input type="text" id="carModel" placeholder="Модель автомобіля" required autocomplete="off"/>
+    <input type="text" id="carVIN" placeholder="VIN (опційно)" autocomplete="off"/>
+    <button type="submit" class="submit">Додати автомобіль</button>
+  </form>
+  <datalist id="clientNames"></datalist>
+  <table>
+    <thead><tr><th>Власник</th><th>Модель</th><th>VIN</th><th>Видалити</th></tr></thead>
+    <tbody id="carList"></tbody>
+  </table>
+</section>
 
-  <section id="invoices" role="tabpanel" aria-label="Рахунки">
-    <div class="actions">
-      <button id="importInvoicesBtn" type="button">Імпорт рахунків</button>
-      <button id="exportInvoicesBtn" type="button">Експорт рахунків</button>
-    </div>
-    <form id="invoiceForm">
-      <label for="invoiceClient">Клієнт</label>
-      <input type="text" id="invoiceClient" required list="clientNames" autocomplete="off" />
-      <label for="invoiceCar">Автомобіль</label>
-      <select id="invoiceCar" required></select>
-      <label for="invoiceParts">Запчастини (утримуй Ctrl або Cmd для мультивибору)</label>
-      <select id="invoiceParts" multiple size="5"></select>
-      <label for="invoiceWork">Роботи</label>
-      <textarea id="invoiceWork" placeholder="Опис робіт" required></textarea>
-      <label for="invoiceWorkPrice">Вартість робіт, грн</label>
-      <input type="number" id="invoiceWorkPrice" min="0" step="0.01" value="0" autocomplete="off" />
-      <button type="submit" class="submit">Додати рахунок</button>
-    </form>
-    <table>
-      <thead>
-        <tr>
-          <th>Клієнт</th>
-          <th>Автомобіль</th>
-          <th>Запчастини</th>
-          <th>Роботи</th>
-          <th>Сума, грн</th>
-          <th>PDF</th>
-          <th>Видалити</th>
-        </tr>
-      </thead>
-      <tbody id="invoiceList"></tbody>
-    </table>
-  </section>
+<section id="parts" role="tabpanel" aria-label="Запчастини">
+  <form id="partForm">
+    <input type="text" id="partName" placeholder="Назва запчастини" required autocomplete="off" />
+    <input type="number" id="partPrice" placeholder="Ціна, грн" required min="0" step="0.01" autocomplete="off" />
+    <button type="submit" class="submit">Додати запчастину</button>
+  </form>
+  <table>
+    <thead><tr><th>Назва</th><th>Ціна, грн</th><th>Видалити</th></tr></thead>
+    <tbody id="partList"></tbody>
+  </table>
+</section>
 
-  <section id="acts" role="tabpanel" aria-label="Акти">
-    <div class="actions">
-      <button id="importActsBtn" type="button">Імпорт актів</button>
-      <button id="exportActsBtn" type="button">Експорт актів</button>
-    </div>
-    <form id="actForm">
-      <input type="text" id="actClient" placeholder="Ім'я клієнта" required list="clientNames" autocomplete="off" />
-      <input type="text" id="actCar" placeholder="Авто" required autocomplete="off"/>
-      <textarea id="actWork" placeholder="Опис робіт" required></textarea>
-      <button type="submit" class="submit">Додати акт</button>
-    </form>
-    <table>
-      <thead>
-        <tr><th>Клієнт</th><th>Авто</th><th>Роботи</th><th>Видалити</th></tr>
-      </thead>
-      <tbody id="actList"></tbody>
-    </table>
-  </section>
+<section id="invoices" role="tabpanel" aria-label="Рахунки">
+  <form id="invoiceForm">
+    <label for="invoiceClient">Клієнт</label>
+    <input type="text" id="invoiceClient" required list="clientNames" autocomplete="off" />
+    <label for="invoiceCar">Автомобіль</label>
+    <select id="invoiceCar" required></select>
+    <label for="invoiceParts">Запчастини (Ctrl/Cmd для мультивибору)</label>
+    <select id="invoiceParts" multiple size="5"></select>
+    <label for="invoiceWork">Роботи</label>
+    <textarea id="invoiceWork" placeholder="Опис робіт" required></textarea>
+    <label for="invoiceWorkPrice">Вартість робіт, грн</label>
+    <input type="number" id="invoiceWorkPrice" min="0" step="0.01" value="0" autocomplete="off" />
+    <button type="submit" class="submit">Додати рахунок</button>
+  </form>
+  <table>
+    <thead>
+      <tr>
+        <th>Клієнт</th>
+        <th>Автомобіль</th>
+        <th>Запчастини</th>
+        <th>Роботи</th>
+        <th>Сума, грн</th>
+        <th>PDF</th>
+        <th>Видалити</th>
+      </tr>
+    </thead>
+    <tbody id="invoiceList"></tbody>
+  </table>
+</section>
+
 </main>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -299,9 +234,9 @@
 <script>
   const { jsPDF } = window.jspdf;
 
+  // Вкладки
   const tabs = document.querySelectorAll('nav button.tab');
   const sections = document.querySelectorAll('main section');
-
   tabs.forEach(tab => {
     tab.addEventListener('click', () => {
       tabs.forEach(t => t.classList.remove('active'));
@@ -311,11 +246,19 @@
     });
   });
 
+  // Дані з localStorage або порожні масиви
   let clients = JSON.parse(localStorage.getItem('clients') || '[]');
   let cars = JSON.parse(localStorage.getItem('cars') || '[]');
   let parts = JSON.parse(localStorage.getItem('parts') || '[]');
   let invoices = JSON.parse(localStorage.getItem('invoices') || '[]');
-  let acts = JSON.parse(localStorage.getItem('acts') || '[]');
+
+  // Функції оновлення UI та localStorage
+  function saveAll() {
+    localStorage.setItem('clients', JSON.stringify(clients));
+    localStorage.setItem('cars', JSON.stringify(cars));
+    localStorage.setItem('parts', JSON.stringify(parts));
+    localStorage.setItem('invoices', JSON.stringify(invoices));
+  }
 
   function updateClientDatalist(){
     const datalist = document.getElementById('clientNames');
@@ -347,6 +290,7 @@
       tbody.appendChild(tr);
     });
 
+    // Оновити select авто в рахунках
     const sel = document.getElementById('invoiceCar');
     sel.innerHTML = '';
     cars.forEach((c,i) => {
@@ -366,6 +310,7 @@
       tbody.appendChild(tr);
     });
 
+    // Оновити select запчастин в рахунках
     const sel = document.getElementById('invoiceParts');
     sel.innerHTML = '';
     parts.forEach((p,i) => {
@@ -384,14 +329,119 @@
       const partsSum = inv.parts.reduce((sum, idx) => sum + (parts[idx]?.price || 0), 0);
       const workPrice = parseFloat(inv.workPrice) || 0;
       const totalPrice = partsSum + workPrice;
-      const workText = inv.work || '';
       const tr = document.createElement('tr');
       tr.innerHTML = `
         <td>${inv.client}</td>
         <td>${cars[inv.car]?.model || ''}</td>
         <td>${selectedParts}</td>
-        <td>${workText}</td>
+        <td>${inv.work}</td>
         <td>${totalPrice.toFixed(2)}</td>
-        <td>
-          <button class="pdf-btn" data-index="${i}" type="button">PDF</button>
-          <button class="delete" data-type="
+        <td><button class="pdf-btn" data-index="${i}" type="button">PDF</button></td>
+        <td><button class="delete" data-type="invoice" data-index="${i}" type="button">×</button></td>
+      `;
+      tbody.appendChild(tr);
+    });
+  }
+
+  // Початковий рендер
+  renderClients();
+  renderCars();
+  renderParts();
+  renderInvoices();
+
+  // Додавання клієнта
+  document.getElementById('clientForm').addEventListener('submit', e => {
+    e.preventDefault();
+    const name = e.target.clientName.value.trim();
+    const phone = e.target.clientPhone.value.trim();
+    if(name === '') return alert('Вкажіть ім\'я клієнта');
+    clients.push({name, phone});
+    saveAll();
+    renderClients();
+    e.target.reset();
+  });
+
+  // Додавання авто
+  document.getElementById('carForm').addEventListener('submit', e => {
+    e.preventDefault();
+    const owner = e.target.carClient.value.trim();
+    const model = e.target.carModel.value.trim();
+    const vin = e.target.carVIN.value.trim();
+    if(owner === '' || model === '') return alert('Вкажіть власника та модель авто');
+    // Перевірка, чи власник існує
+    if(!clients.some(c=> c.name === owner)) return alert('Клієнта не знайдено. Спочатку додайте клієнта.');
+    cars.push({owner, model, vin});
+    saveAll();
+    renderCars();
+    e.target.reset();
+  });
+
+  // Додавання запчастини
+  document.getElementById('partForm').addEventListener('submit', e => {
+    e.preventDefault();
+    const name = e.target.partName.value.trim();
+    const price = parseFloat(e.target.partPrice.value);
+    if(name === '' || isNaN(price) || price < 0) return alert('Вкажіть коректні дані запчастини');
+    parts.push({name, price});
+    saveAll();
+    renderParts();
+    e.target.reset();
+  });
+
+  // Додавання рахунку
+  document.getElementById('invoiceForm').addEventListener('submit', e => {
+    e.preventDefault();
+    const client = e.target.invoiceClient.value.trim();
+    const car = parseInt(e.target.invoiceCar.value);
+    const selectedParts = Array.from(e.target.invoiceParts.selectedOptions).map(opt => parseInt(opt.value));
+    const work = e.target.invoiceWork.value.trim();
+    const workPrice = parseFloat(e.target.invoiceWorkPrice.value) || 0;
+
+    if(client === '') return alert('Вкажіть клієнта');
+    if(isNaN(car) || !cars[car]) return alert('Вкажіть автомобіль');
+    if(work === '') return alert('Опишіть роботи');
+
+    // Перевірка, чи клієнт існує
+    if(!clients.some(c => c.name === client)) return alert('Клієнта не знайдено. Додайте клієнта.');
+
+    invoices.push({
+      client,
+      car,
+      parts: selectedParts,
+      work,
+      workPrice
+    });
+    saveAll();
+    renderInvoices();
+    e.target.reset();
+  });
+
+  // Обробка кнопок видалення та PDF
+  document.body.addEventListener('click', e => {
+    if(e.target.classList.contains('delete')) {
+      const type = e.target.dataset.type;
+      const index = parseInt(e.target.dataset.index);
+      if(isNaN(index)) return;
+      if(type === 'client') {
+        clients.splice(index,1);
+        // Видалити авто і рахунки пов'язані з клієнтом
+        cars = cars.filter(c => c.owner !== clients[index]?.name);
+        invoices = invoices.filter(inv => inv.client !== clients[index]?.name);
+      } else if(type === 'car') {
+        cars.splice(index,1);
+        invoices = invoices.filter(inv => inv.car !== index);
+      } else if(type === 'part') {
+        parts.splice(index,1);
+        invoices.forEach(inv => {
+          inv.parts = inv.parts.filter(pIdx => pIdx !== index);
+        });
+      } else if(type === 'invoice') {
+        invoices.splice(index,1);
+      }
+      saveAll();
+      renderClients();
+      renderCars();
+      renderParts();
+      renderInvoices();
+    } else if(e.target.classList.contains('pdf-btn')) {
+      const index = parseInt(e.target.dataset.index
